fixing distortion of map controls

--- a/css/panorama.css
+++ b/css/panorama.css
@@ -20,3 +20,4 @@ body {
         width: 100%;
         background-color: #ff0000;
  }
+ #map img{max-width: inherit;} 
